# llama-megakernel

ggml/: CMakeLists.txt
ggml/include/: ggml-megakernel.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-turboq-tables.h  ggml-turboq.c  ggml-turboq.h  ggml.c
ggml/src/ggml-gfx1100_megakernel/: .gitignore  CMakeLists.txt  SESSION_RECAP.md  arch_ids.h  decode-dll-wrapper.hip  decode.hip  gfx1100-init.cpp  gfx1100-internal.h  gfx1100-megakernel.cpp  gfx1100-megakernel.h  gfx1100-model-loader.cpp  prefill.hip
ggml/src/ggml-gfx1100_megakernel/audio/: wavtokenizer.cpp
ggml/src/ggml-gfx1100_megakernel/benchmarks/: REFERENCE.md  profile-data.jsonl
ggml/src/ggml-gfx1100_megakernel/benchmarks/gpu-params/: gemma2-bl-clean.txt
ggml/src/ggml-gfx1100_megakernel/benchmarks/graph-v2/: baseline-gemma2-tg100.txt  gemma2-baseline-lengths.txt
ggml/src/ggml-gfx1100_megakernel/composition/: comp-compose.h  comp-detect.h  comp-dispatch.h  comp-execute.h  comp-optimize.h  comp-tune.h  comp-types.h  comp-validate.h
ggml/src/ggml-gfx1100_megakernel/docs/: GGUF_SIGNALS.md  KERNEL_COMPOSITION.md
ggml/src/ggml-gfx1100_megakernel/encoder/: bert.cpp  t5-enc.cpp
ggml/src/ggml-gfx1100_megakernel/forward/: bitnet.cpp  cogvlm.cpp  deepseek2-mla.cpp  llama-family.cpp  mamba.cpp  prompt.cpp  rwkv6.cpp  rwkv7.cpp  t5-dec.cpp
ggml/src/ggml-gfx1100_megakernel/helpers/: activations.h  attention-tile.h  attention-wmma.h  attention.h  block-reduce.h  deltanet.h  dequant.h  embed-dequant.h  grid-sync.h  hip-shim.h  iq-tables.h  l2-norm.h  matvec.h  mem-utils.h  mma.h  mmq-quantize.h  mmq-tiles.h  mmq.h  quant-types.h  rocblas-gemm.h  rope.h  ssm-conv.h  vec-dot.h  warp-reduce.h
ggml/src/ggml-gfx1100_megakernel/shared/: batch-ops.cpp  batch-ops.h  dispatch.cpp  embed-dispatch.h  matvec-dispatch.h  ssm-step.h  t5-pos-bias.h
ggml/src/ggml-gfx1100_megakernel/tests/: TEST_MATRIX.md  test-baseline-dump.cpp  test-baseline-logits.cpp  test-buffer-safety.cpp  test-coop-launch.cpp  test-grid-sync.hip  test-harness.h  test-init-safety.cpp  test-kernel-attention-d64.cpp  test-kernel-deltanet.cpp  test-kernel-dequant.cpp  test-kernel-elementwise.cpp  test-kernel-embed-float.cpp  test-kernel-embed.cpp  test-kernel-lmhead.cpp  test-kernel-matvec-float.cpp  test-kernel-matvec-qtypes.cpp  test-kernel-matvec.cpp  test-kernel-mmq-quantize.cpp  test-kernel-moe.cpp  test-kernel-ported-ops.cpp  test-kernel-prompt-ops.cpp  test-kernel-qknorm.cpp  test-kernel-quantize.cpp  test-kernel-rmsnorm.cpp  test-kernel-simple-ops.cpp  test-matrix.sh  test-megakernel-e2e.cpp  test-null-safety.cpp  test-operation-ordering.cpp  test-two-kernels.cpp
